# engineve

./: .gitignore  README.md  pyproject.toml
design/: ai_takes_turn.plantuml  engine_cmd_flow.plantuml  observer_react.plantuml
src/engineve/: __main__.py  combatactoriterator.py  durationobserver.py  enginesync.py  factory.py  gameengine.py  gamestatemanager.py  loader.py  main.py  mainfactory.py  rich_demo_ge.py  serializable.py  tags.py  utils.py
src/engineve/actorai/: abstractai.py  aiutils.py  basicai.py  getaiclass.py  movefactory.py  pathfinding.py  pathingutils.py  turniter.py
src/engineve/archetypes/: archetype.py  characterclass.py  effect.py  solaire_sheet.yml
src/engineve/config/: constants.py  tags.yaml  tags_list.py
src/engineve/enginecommands/: attackcommand.py  attackrollcommand.py  command.py  compositecommand.py  damagerollcommand.py  interruptexception.py  invoker.py  readme.md  receiver.py
src/engineve/enginestates/: __init__.py  combatstate.py  enginestate.py  enginestateinterface.py  landingstate.py  menustate.py  overworldstate.py
src/engineve/factory/: definitionloader.py  glossary.py  monster.py  spawningpool.py
tests/: includes.py  test_ai.py  test_animation_lock.py  test_archetypes.py  test_characterclass.py  test_combat_engine_state.py  test_commands.py  test_decomagic.py  test_durations.py  test_effects.py  test_gamemove.py  test_integration_bugs.py  test_loader.py  test_log.py  test_meta_command.py  test_observers.py  test_overworld_state.py  test_pathfinding.py  test_save_load.py  test_tags.py  test_utils.py  utils.py
(+45 files in other folders)
